--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
         
 
 
-            <div class="container">
+               <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
@@ -475,7 +475,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        <h3 class="pricing-price"><sup></sup><sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -508,7 +508,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        <h3 class="pricing-price"><sup></sup><sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -540,7 +540,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        <h3 class="pricing-price"><sup></sup><sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -573,7 +573,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        <h3 class="pricing-price"><sup></sup><sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -606,7 +606,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        <h3 class="pricing-price"><sup></sup><sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -639,7 +639,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        <h3 class="pricing-price"><sup></sup><sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -671,7 +671,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        <h3 class="pricing-price"><sup></sup><sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -704,7 +704,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        <h3 class="pricing-price"><sup></sup><sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -736,7 +736,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        <h3 class="pricing-price"><sup></sup><sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -769,7 +769,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        <h3 class="pricing-price"><sup></sup><sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -801,7 +801,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        <h3 class="pricing-price"><sup></sup><sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -834,7 +834,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        <h3 class="pricing-price"><sup></sup><sub></sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -866,7 +866,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                        <h3 class="pricing-price"><sup></sup><sub></sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
