--- a/index.html
+++ b/index.html
@@ -2882,7 +2882,7 @@
                            <div class="col-xl-12 ">
                                <div class="footer-copy-right text-center">
                                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.  All rights reserved -->
-                                     Copyright &copy;<script>document.write(new Date().getFullYear());</script> Maandeeq
+                                     Copyright &copy;<script>document.write(new Date().getFullYear());</script> MAANDEEQ
                                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                    </p>
                                  </div>
