--- a/index.html
+++ b/index.html
@@ -2803,9 +2803,7 @@
                                    <div class="footer-tittle">
                                        <div class="footer-pera">
                                            <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;font-size: medium;">
-                                               EMIS is the best tool to manage educational institutions
-                                               efficiently and effectively. EMIS provide quality education
-                                               system.
+                                               Online systems are the best tool to manage educational institutions efficiently and effectively.
                                            </p>
                                        </div>
                                    </div>
