--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                                             <ul id="navigation">                                                                                          
                                                 <li><a href="index.html">HOME</a>
                                                     <ul class="submenu">
-                                                        <li><a href="index.html">MAANDEEQ HOME</a></li>
-                                                        <li><a href="arabic_home.html">ARABIC DEPARTMENT</a></li>
-                                                        <li><a href="english_home.html">ENGLISH DEPARTMENT</a></li>
+                                                        <li><a href="index.html">MAANDEEQ SYSTEMS</a></li>
+                                                        <li><a href="arabic_home.html">ARABIC SYSTEMS</a></li>
+                                                        <li><a href="english_home.html">ENGLISH SYSTEMS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="exams.html">EXAMINATIONS</a>
@@ -78,16 +78,16 @@
                                                 </li>
                                                 <li><a href="services.html">SERVICES</a>
                                                     <ul class="submenu">
-                                                        <li><a href="services.html">MAANDEEQ SUBCRIPTIONS</a></li>
-                                                        <li><a href="arabic_services.html">ARABIC SUBCRIPTIONS</a></li>
-                                                        <li><a href="english_services.html">ENGLISH SUBCRIPTIONS</a></li>
+                                                        <li><a href="services.html">MAANDEEQ SERVICES</a></li>
+                                                        <li><a href="arabic_services.html">ARABIC SERVICES</a></li>
+                                                        <li><a href="english_services.html">ENGLISH SERVICES</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="products.html">PRODUCTS</a>
                                                     <ul class="submenu">
                                                         <li><a href="products.html">MAANDEEQ PRODUCTS</a></li>
-                                                        <li><a href="arabic_products.html">ARABIC APPLICATIONS</a></li>
-                                                        <li><a href="english_products.html">ENGLISH APPLICATIONS</a></li>
+                                                        <li><a href="arabic_products.html">ARABIC PRODUCTS</a></li>
+                                                        <li><a href="english_products.html">ENGLISH PRODUCTS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="archives.html">DOWNLOADS</a>
