--- a/index.html
+++ b/index.html
@@ -2822,15 +2822,15 @@
                            <div class="single-footer-caption mb-50">
                                <div class="footer-tittle">
                                    <h4>SCHOOLS</h4>
-                                   <ul>
-                                       <li><a href="schools.examinations.html">Examinations</a></li>
-                                       <li><a href="schools.systems.html">Systems</a></li>
-                                       <li><a href="schools_services.html">Services</a></li>
-                                       <li><a href="schools_products.html">Products</a></li>
-                                       <li><a href="schools_users.html">Users</a></li>
-                                       <li><a href="schools_supervisors.html">Supervisors</a></li>
-                                       <li><a href="schools_teachers.html">Teachers</a></li>
-                                       <li><a href="schools_students.html">Students</a></li>
+                                   <ul> 
+                                       <li><a href="schools.examinations.html">EXAMINATIONS</a></li>
+                                       <li><a href="schools.systems.html">SYSTEMS</a></li>
+                                       <li><a href="schools_services.html">SERVICES</a></li>
+                                       <li><a href="schools_products.html">PRODUCTS</a></li>
+                                       <li><a href="schools_users.html">USERS</a></li>
+                                       <li><a href="schools_supervisors.html">SUPERVISORS</a></li>
+                                       <li><a href="schools_teachers.html">TEACHERS</a></li>
+                                       <li><a href="schools_students.html">STUDENTS</a></li>
                                    </ul>
                                </div>
                            </div>
@@ -2839,15 +2839,15 @@
                            <div class="single-footer-caption mb-50">
                                <div class="footer-tittle">
                                    <h4>INSTITUTES</h4>
-                                   <ul>
-                                    <li><a href="institutes.examinations.html">Examinations</a></li>
-                                    <li><a href="institutes.systems.html">Systems</a></li>
-                                    <li><a href="institutes_services.html">Services</a></li>
-                                    <li><a href="institutes_products.html">Products</a></li>
-                                    <li><a href="institutes_users.html">Users</a></li>
-                                    <li><a href="institutes_supervisors.html">Supervisors</a></li>
-                                    <li><a href="institutes_teachers.html">Teachers</a></li>
-                                    <li><a href="institutes_students.html">Students</a></li>
+                                   <ul> 
+                                       <li><a href="institutes.examinations.html">EXAMINATIONS</a></li>
+                                       <li><a href="institutes.systems.html">SYSTEMS</a></li>
+                                       <li><a href="institutes_services.html">SERVICES</a></li>
+                                       <li><a href="institutes_products.html">PRODUCTS</a></li>
+                                       <li><a href="institutes_users.html">USERS</a></li>
+                                       <li><a href="institutes_supervisors.html">SUPERVISORS</a></li>
+                                       <li><a href="institutes_teachers.html">TEACHERS</a></li>
+                                       <li><a href="institutes_students.html">STUDENTS</a></li>
                                    </ul>
                                </div>
                            </div>
@@ -2856,15 +2856,15 @@
                            <div class="single-footer-caption mb-50">
                                <div class="footer-tittle">
                                    <h4>UNIVERSITIES</h4>
-                                   <ul>
-                                    <li><a href="universities.examinations.html">Examinations</a></li>
-                                    <li><a href="universities.systems.html">Systems</a></li>
-                                    <li><a href="universities_services.html">Services</a></li>
-                                    <li><a href="universities_products.html">Products</a></li>
-                                    <li><a href="universities_users.html">Users</a></li>
-                                    <li><a href="universities_supervisors.html">Supervisors</a></li>
-                                    <li><a href="universities_teachers.html">Teachers</a></li>
-                                    <li><a href="universities_students.html">Students</a></li>
+                                   <ul> 
+                                       <li><a href="universities.examinations.html">EXAMINATIONS</a></li>
+                                       <li><a href="universities.systems.html">SYSTEMS</a></li>
+                                       <li><a href="universities_services.html">SERVICES</a></li>
+                                       <li><a href="universities_products.html">PRODUCTS</a></li>
+                                       <li><a href="universities_users.html">USERS</a></li>
+                                       <li><a href="universities_supervisors.html">SUPERVISORS</a></li>
+                                       <li><a href="universities_teachers.html">TEACHERS</a></li>
+                                       <li><a href="universities_students.html">STUDENTS</a></li>
                                    </ul>
                                </div>
                            </div>
