--- a/exams.html
+++ b/exams.html
@@ -323,8 +323,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EXAMINATIONAL</h2>
-                            <h2>SERVICES</h2>
+                            <h2>MONTHLY</h2>
+                            <h2>EXAMINATIONS</h2>
                         </div>
                     </div>
                 </div>
@@ -762,8 +762,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EDUCATIONAL</h2>
-                            <h2>SERVICES</h2>
+                            <h2>YEARLY</h2>
+                            <h2>EXAMINATIONS</h2>
                         </div>
                     </div>
                 </div>
