--- a/exams.html
+++ b/exams.html
@@ -1201,7 +1201,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EXAMINATIONAL</h2>
+                            <h2>MONTHLY</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
@@ -1640,7 +1640,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EDUCATIONAL</h2>
+                            <h2>YEARLY</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
