--- a/index.html
+++ b/index.html
@@ -325,6 +325,9 @@
                         <div class="section-tittle text-center mb-55">
                               <h2>MAANDEEQ</h2>
                                <h2>VISION</h2>
+                               <p style="text-align: justify;">
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                </p>
                         </div>
                     </div>
                 </div>
