--- a/arabic_exams.html
+++ b/arabic_exams.html
@@ -760,7 +760,7 @@
                
              </div>
 
-             <div class="container">
+              <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
@@ -794,7 +794,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -827,7 +827,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -859,7 +859,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -892,7 +892,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -925,7 +925,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -958,7 +958,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -990,7 +990,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1023,7 +1023,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1055,7 +1055,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1088,7 +1088,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1120,7 +1120,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1153,7 +1153,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1185,7 +1185,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1672,7 +1672,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1705,7 +1705,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1737,7 +1737,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1770,7 +1770,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1803,7 +1803,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1836,7 +1836,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1868,7 +1868,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1901,7 +1901,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1933,7 +1933,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1966,7 +1966,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1998,7 +1998,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2031,7 +2031,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -2063,7 +2063,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly*</sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
