--- a/arabic_exams.html
+++ b/arabic_exams.html
@@ -355,7 +355,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -388,7 +388,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -420,7 +420,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -453,7 +453,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -486,7 +486,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -519,7 +519,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -551,7 +551,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -584,7 +584,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -616,7 +616,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -649,7 +649,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -681,7 +681,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -714,7 +714,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -746,7 +746,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1199,6 +1199,7 @@
                
              </div>
 
+            
              <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
@@ -1233,7 +1234,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1266,7 +1267,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1298,7 +1299,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1331,7 +1332,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1364,7 +1365,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1397,7 +1398,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1429,7 +1430,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1462,7 +1463,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1494,7 +1495,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1527,7 +1528,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1559,7 +1560,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1592,7 +1593,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1624,7 +1625,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
+                                       <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly*</sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
