--- a/index.html
+++ b/index.html
@@ -428,6 +428,107 @@
                         </div>
                     </div>
                 </div>
+
+                 <div class="row">
+                    <div class="col-lg-4">
+                        <div class="properties properties2 mb-30">
+                            <div class="properties__card">
+                                <div class="properties__img">
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
+                                </div>
+                                <div class="properties__caption">
+                                <p>ACADEMIC SYSTEMS</p>
+                                <h3>SCHOOLS</h3>
+                                <p style="text-align: justify;">
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                </p>
+                                    <div class="properties__footer d-flex justify-content-between align-items-center">
+                                        <div class="restaurant-name">
+                                            <!-- <div class="rating">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star-half"></i>
+                                            </div>
+                                            <p><span>(4.5)</span> based on 120</p> -->
+                                        </div>
+                                        <!-- <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
+                                        </div> -->
+                                    </div>
+                                    <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="properties properties2 mb-30">
+                            <div class="properties__card">
+                                <div class="properties__img ">
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
+                                </div>
+                                <div class="properties__caption">
+                                    <p>ACADEMIC SYSTEMS</p>
+                                    <h3>INSTITUTES</h3>
+                                    <p style="text-align: justify;">
+                                        ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    </p>
+                                    <div class="properties__footer d-flex justify-content-between align-items-center">
+                                        <div class="restaurant-name">
+                                            <!-- <div class="rating">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star-half"></i>
+                                            </div>
+                                            <p><span>(4.5)</span> based on 120</p> -->
+                                        </div>
+                                        <!-- <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
+                                        </div> -->
+                                    </div>
+                                    <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
+                                </div>
+                                
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="properties properties2 mb-30">
+                            <div class="properties__card">
+                                <div class="properties__img ">
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
+                                </div>
+                                <div class="properties__caption">
+                                <p>ACADEMIC SYSTEMS</p>
+                                <h3>UNIVERSITIES</h3>
+                                <p style="text-align: justify;">
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                </p>
+                                    <div class="properties__footer d-flex justify-content-between align-items-center">
+                                        <div class="restaurant-name">
+                                            <!-- <div class="rating">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star-half"></i>
+                                            </div>
+                                            <p><span>(4.5)</span> based on 120</p> -->
+                                        </div>
+                                        <!-- <div class="price">
+                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
+                                        </div> -->
+                                    </div>
+                                    <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
+                                </div>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mt-40">
