--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC SYSTEMS</p>
+                                <p>ACADEMIC EXAMINATIONS</p>
                                 <h3>SCHOOLS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -469,7 +469,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ACADEMIC SYSTEMS</p>
+                                    <p>ACADEMIC EXAMINATIONS</p>
                                     <h3>INSTITUTES</h3>
                                     <p style="text-align: justify;">
                                         ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -502,7 +502,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC SYSTEMS</p>
+                                <p>ACADEMIC EXAMINATIONS</p>
                                 <h3>UNIVERSITIES</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
