--- a/arabic_services.html
+++ b/arabic_services.html
@@ -357,7 +357,7 @@
                                             <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div>
                                     </div>
-                                    <!-- <!-- <a href="#" class="border-btn border-btn2">CODE</a> --> -->
+                                     <!-- <a href="#" class="border-btn border-btn2">CODE</a> --> -->
                                 </div>
                             </div>
                         </div>
