--- a/arabic_services.html
+++ b/arabic_services.html
@@ -154,7 +154,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>KGSS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -167,7 +167,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>PRISS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -180,7 +180,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>PRESS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>SECSS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -210,7 +210,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>KGPRISS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -223,7 +223,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>PRIPRESS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -236,7 +236,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>PRESECSS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -249,7 +249,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>KGPRIPRESS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -262,7 +262,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>PRIPRESECSS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -279,7 +279,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>KGPRIPRESECSS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -292,7 +292,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>AIS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -305,7 +305,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>AUS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
